# MotorlessAircraftFirmware

./: .clangd  .mxproject  CMakeLists.txt  PenguinJunior.ioc  README.md
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: gpio.c  main.cpp  sdio.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Modules/BMI088/: CMakeLists.txt  bmi088.cpp  bmi088.hpp  bmi088_defs.hpp  bmi088a.cpp  bmi088a.hpp  bmi088g.cpp  bmi088g.hpp
Modules/BMI088_legacy/: Accel.c  Accel.h  CMakeLists.txt  Gyro.h  IMU.c
Modules/Example_module/: CMakeLists.txt  example_class.cpp  example_class.hpp  example_class_stabs.cpp  exanple_class_filters.cpp
Modules/ExpandedVector3/: CMakeLists.txt  ExpandedVector3.cpp  ExpandedVector3.hpp
Modules/SD_card/: CMakeLists.txt  logger.cpp  logger.hpp  logger_messages.cpp  sd_file_handling.c  sd_file_handling.h
Modules/SWO/: CMakeLists.txt  swo_debug.cpp  swo_debug.hpp
Modules/Servo/: CMakeLists.txt  servo.cpp  servo.hpp  servo_def.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
